feat: optional write keys (#85)
